<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="film"
            type="com.slim.studiog.network.models.Film" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_large">

            <TextView
                android:id="@+id/fragment_film_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_big_header"
                android:text="@{film.title}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Castle in the Sky"
                style="@style/TitleTextStyle"/>

            <TextView
                android:id="@+id/fragment_film_details_romanised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                originalTitle="@{film.originalTitle}"
                romanised="@{film.originalTitleRomanised}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_title"
                tools:text="天空の城ラピュタ" />

            <TextView
                android:id="@+id/fragment_film_details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{film.description}"
                android:layout_marginTop="@dimen/space_xxlarge"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_romanised"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="The orphan Sheeta inherited a mysterious crystal that links her to the mythical sky-kingdom of Laputa. With the help of resourceful Pazu and a rollicking band of sky pirates, she makes her way to the ruins of the once-great civilization. Sheeta and Pazu must outwit the evil Muska, who plans to use Laputa's science to make himself ruler of the world." />

            <!-- director -->
            <TextView
                android:id="@+id/fragment_film_details_director_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_film_details_director_value"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/label_director" />

            <TextView
                android:id="@+id/fragment_film_details_director_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{film.director}"
                android:layout_marginStart="@dimen/space_large"
                app:layout_constraintStart_toEndOf="@id/fragment_film_details_director_label"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment_film_details_director_label"
                tools:text="Hayao Miyazaki" />

            <!-- producer -->
            <TextView
                android:id="@+id/fragment_film_details_producer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_director_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_film_details_producer_value"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/label_producer" />

            <TextView
                android:id="@+id/fragment_film_details_producer_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{film.producer}"
                android:layout_marginStart="@dimen/space_large"
                app:layout_constraintStart_toEndOf="@id/fragment_film_details_producer_label"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment_film_details_producer_label"
                tools:text="Hayao Miyazaki" />

            <!-- release date -->
            <TextView
                android:id="@+id/fragment_film_details_rdate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_producer_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_film_details_rdate_value"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/label_release_date" />

            <TextView
                android:id="@+id/fragment_film_details_rdate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_large"
                android:text="@{film.releaseDate}"
                app:layout_constraintStart_toEndOf="@id/fragment_film_details_rdate_label"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment_film_details_rdate_label"
                tools:text="1986" />
            <!-- release date -->
            <TextView
                android:id="@+id/fragment_film_details_rt_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_large"
                app:layout_constraintTop_toBottomOf="@id/fragment_film_details_rdate_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fragment_film_details_rt_score_value"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:text="@string/label_rt_score" />

            <TextView
                android:id="@+id/fragment_film_details_rt_score_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_large"
                android:text="@{film.rtScore.toString()}"
                app:layout_constraintStart_toEndOf="@id/fragment_film_details_rt_score_label"
                app:layout_constraintBaseline_toBaselineOf="@id/fragment_film_details_rt_score_label"
                tools:text="95" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
